--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,18 +6,79 @@ import BaseLayout from '../layouts/BaseLayout.astro';
 ---
 
 <BaseLayout>
-	<section class="mx-auto flex flex-col bg-white px-4 py-6 mt-6">
+	<section class="mx-auto mt-6 flex flex-col bg-white px-4 py-6">
 		<div class="max-w-4xl text-left">
 			<h1 class="text-3xl font-bold">Meditate. Focus. Create.</h1>
-			<p class="text-lg mt-4">Welcome to the digital garden of Andrew Weisbeck, WeisGarden! This website was inspired by one of my favorite themes, Enjoyment Work by Brennan Brown. You will notice many similar styling, structure, and layout aspects of that theme here, so I must give a lot of credit to Brennan because he is the one who thought of this design, thanks!</p>
-			<br>
-			<p class="text-lg">This is a place for me to collect my thoughts, notes, ideas, and more — my own corner of the internet to share with the world. I hope you find something useful or interesting here! Here are some things you might want to check out if you aren't sure where to start:</p>
-			<ol class="mt-4 list-decimal list-inside pl-4">
-				<li class="mt-2"><a class="text-xl text-sky-600 hover:text-sky-800 hover:underline hover:underline-offset-1" href="/notes/catalog">Notes Catalog</a></li>
-					<ul class="list-disc list-inside pl-4 mt-2">
-						<li class="text-xl">Collection of my notes - everything including Greek Philosophy, psychology, computer science, and Bayesean Statistics. Something for everyone.</li>
-					</ul>
+			<p class="mt-4 text-lg">
+				Welcome to the digital garden of Andrew Weisbeck, WeisGarden! This
+				website was inspired by one of my favorite themes, Enjoyment Work by
+				Brennan Brown. You will notice many similar styling, structure, and
+				layout aspects of that theme here, so I must give a lot of credit to
+				Brennan because he is the one who thought of this design, thanks!
+			</p>
+			<br />
+			<p class="text-lg">
+				This is a place for me to collect my thoughts, notes, ideas, and more —
+				my own corner of the internet to share with the world. I hope you find
+				something useful or interesting here! Here are some things you might
+				want to check out if you aren't sure where to start:
+			</p>
+			<ol class="mt-4 list-inside list-decimal pl-2 text-xl">
+				<li class="mt-2">
+					<a
+						class="text-xl font-bold text-sky-600 underline underline-offset-1 hover:text-sky-800 hover:no-underline"
+						href="/notes/catalog">Notes Catalog</a
+					>
+				</li>
+				<ul class="mt-2 list-inside list-disc pl-4">
+					<li class="text-lg">
+						My collection of notes, organized into categories like computer
+						science, psychology, and statistics. Notes on anything and
+						everything - read about the original cynicism philosopher Diogenes
+						on one page and then read about Bayesian statistics on another.
+						There should be something for everybody here.
+					</li>
+				</ul>
+				<li class="mt-2">
+					<a
+						class="text-xl font-bold text-sky-600 underline underline-offset-1 hover:text-sky-800 hover:no-underline"
+						href="/notes/catalog">Daily Journal</a
+					>
+				</li>
+				<ul class="mt-2 list-inside list-disc pl-4">
+					<li class="text-lg">
+						Daily posts that include random thoughts, ideas, interesting free
+						write sessions that I feel like sharing, and many of life's
+						difficult philiosophical questions get answered here as well. You
+						also get to see what I'm doing most days!
+					</li>
+				</ul>
+				<li class="mt-2">
+					<a
+						class="text-xl font-bold text-sky-600 underline underline-offset-1 hover:text-sky-800 hover:no-underline"
+						href="/notes/catalog">Blog Posts</a
+					>
+				</li>
+				<ul class="mt-2 list-inside list-disc pl-4">
+					<li class="text-lg">
+						Published posts on blogging platforms I've written, posts written
+						only for the digital garden, and any other published writing will
+						end up here. The most polished content of the site is here for sure.
+					</li>
+				</ul>
+				<li class="mt-2">
+					<a
+						class="text-xl font-bold text-sky-600 underline underline-offset-1 hover:text-sky-800 hover:no-underline"
+						href="/notes/catalog">Sprints and Projects</a>
+				</li>
+				<ul class="mt-2 list-inside list-disc pl-4">
+					<li class="text-lg">
+						This will be sort of an experimental feature you could say - well, the sprints section at least. I used this starter project from the 11ty community that was basically a personal agile website theme that I really liked and I've always wanted to implement that into my own site/digital garden, so this is testing that out! You'll just have to visit that section to see how it works!
+					</li>
+				</ul>
 			</ol>
+			<br>
+			<p>I've been trying to get my digital garden site up and shared publically, but I always sputter out when it comes to picking a design I like, because I am honestly never satisfied enough with anything. The Enjoyment Work theme is about as close to satisfaction as I'll probably ever get, so I'm implementing that as the solution and building on top of it, extending it to meet my needs while doing the things a digital garden needs to do.</p>
 		</div>
 	</section>
 </BaseLayout>
