Started adding other content schemas and utils

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,77 +8,57 @@ import BaseLayout from '../layouts/BaseLayout.astro';
 <BaseLayout>
 	<section class="mx-auto mt-6 flex flex-col bg-white px-4 py-6">
 		<div class="max-w-4xl text-left">
-			<h1 class="text-3xl font-bold">Meditate. Focus. Create.</h1>
-			<p class="mt-4 text-lg">
-				Welcome to the digital garden of Andrew Weisbeck, WeisGarden! This
-				website was inspired by one of my favorite themes, Enjoyment Work by
-				Brennan Brown. You will notice many similar styling, structure, and
-				layout aspects of that theme here, so I must give a lot of credit to
-				Brennan because he is the one who thought of this design, thanks!
+			<h1 class="text-3xl font-bold mb-4">Meditate. Focus. Create.</h1>
+			<p class="text-md">
+				This digital garden is a space for sharing how I synergize critical thinking, problem solving, and focused creativity into ideas, words, and solutions. Everything starts with a seed of an idea, and grows into a tree of knowledge. This is my digital garden, where I cultivate my thoughts, ideas, and projects.
 			</p>
-			<br />
-			<p class="text-lg">
-				This is a place for me to collect my thoughts, notes, ideas, and more —
-				my own corner of the internet to share with the world. I hope you find
-				something useful or interesting here! Here are some things you might
-				want to check out if you aren't sure where to start:
-			</p>
-			<ol class="mt-4 list-inside list-decimal pl-2 text-xl">
-				<li class="mt-2">
+			<p class="mt-2 text-md">Here'as a breakdown of the main content sections that are a part of my entire creation and learmin</p>
+			<ol class="mt-4 list-inside list-decimal pl-2 text-md">
+				<li>
 					<a
-						class="text-xl font-bold text-sky-600 underline underline-offset-1 hover:text-sky-800 hover:no-underline"
+						class="text-lg font-bold text-sky-600 underline underline-offset-1 hover:text-sky-800 hover:no-underline"
 						href="/notes/catalog">Notes Catalog</a
 					>
 				</li>
-				<ul class="mt-2 list-inside list-disc pl-4">
-					<li class="text-lg">
-						My collection of notes, organized into categories like computer
-						science, psychology, and statistics. Notes on anything and
-						everything - read about the original cynicism philosopher Diogenes
-						on one page and then read about Bayesian statistics on another.
-						There should be something for everybody here.
+				<ul class="mt-2 list-inside list-none pl-4 text-md">
+					<li>
+						These aren't collected notes, but thoughtful and curated notes that dig deeper than just surface level information. These are notes that I have taken the time to process and think about, and I hope they can be useful to you as well.
 					</li>
 				</ul>
 				<li class="mt-2">
 					<a
-						class="text-xl font-bold text-sky-600 underline underline-offset-1 hover:text-sky-800 hover:no-underline"
+						class="text-lg font-bold text-sky-600 underline underline-offset-1 hover:text-sky-800 hover:no-underline"
 						href="/notes/catalog">Daily Journal</a
-					>
+			>
 				</li>
 				<ul class="mt-2 list-inside list-disc pl-4">
-					<li class="text-lg">
-						Daily posts that include random thoughts, ideas, interesting free
-						write sessions that I feel like sharing, and many of life's
-						difficult philiosophical questions get answered here as well. You
-						also get to see what I'm doing most days!
+					<li>
+						Everything starts here. This garden is modeled similar to my personal Logseq instance, where I journal daily and then link out to other notes and ideas that I have. This is the heart of the garden, and where most of the growth happens.
 					</li>
 				</ul>
 				<li class="mt-2">
 					<a
-						class="text-xl font-bold text-sky-600 underline underline-offset-1 hover:text-sky-800 hover:no-underline"
+						class="text-lg font-bold text-sky-600 underline underline-offset-1 hover:text-sky-800 hover:no-underline"
 						href="/notes/catalog">Blog Posts</a
 					>
 				</li>
 				<ul class="mt-2 list-inside list-disc pl-4">
-					<li class="text-lg">
-						Published posts on blogging platforms I've written, posts written
-						only for the digital garden, and any other published writing will
-						end up here. The most polished content of the site is here for sure.
+					<li>
+						The blog posts are polished and refined pieces of writing that connect notes, ideas, and conclusions I've made from time spent working on projects, reading, writing, and learning. These are the final products that I hope to share with the world, and I hope you find them useful and interesting!
 					</li>
 				</ul>
 				<li class="mt-2">
 					<a
-						class="text-xl font-bold text-sky-600 underline underline-offset-1 hover:text-sky-800 hover:no-underline"
+						class="text-lg font-bold text-sky-600 underline underline-offset-1 hover:text-sky-800 hover:no-underline"
 						href="/notes/catalog">Sprints and Projects</a>
 				</li>
-				<ul class="mt-2 list-inside list-disc pl-4">
-					<li class="text-lg">
-						This will be sort of an experimental feature you could say - well, the sprints section at least. I used this starter project from the 11ty community that was basically a personal agile website theme that I really liked and I've always wanted to implement that into my own site/digital garden, so this is testing that out! You'll just have to visit that section to see how it works!
+				<ul class="mt-2 list-inside list-disc pl-4 text-md">
+					<li class="text-md">
+						I am a big believer in the power of focused work and sprints to get things done. I am also a big believer in sharing things that work with others, so I am sharing my process for getting things done in the hopes that it might be useful to you as well.
 					</li>
 				</ul>
 			</ol>
-			<br>
-			<p>I've been trying to get my digital garden site up and shared publically, but I always sputter out when it comes to picking a design I like, because I am honestly never satisfied enough with anything. The Enjoyment Work theme is about as close to satisfaction as I'll probably ever get, so I'm implementing that as the solution and building on top of it, extending it to meet my needs while doing the things a digital garden needs to do.</p>
+			
 		</div>
 	</section>
 </BaseLayout>
