--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,9 +10,16 @@ import BaseLayout from '../layouts/BaseLayout.astro';
 		<div class="max-w-4xl text-left">
 			<h1 class="text-3xl font-bold mb-4">Meditate. Focus. Create.</h1>
 			<p class="text-md">
-				This digital garden is a space for sharing how I synergize critical thinking, problem solving, and focused creativity into ideas, words, and solutions. Everything starts with a seed of an idea, and grows into a tree of knowledge. This is my digital garden, where I cultivate my thoughts, ideas, and projects.
+				This digital garden is a space for sharing how I synergize critical
+				thinking, problem solving, and focused creativity into ideas, words, and
+				solutions. Everything starts with a seed of an idea, and grows into a
+				tree of knowledge. This is my digital garden, where I cultivate my
+				thoughts, ideas, and projects.
 			</p>
-			<p class="mt-2 text-md">Here'as a breakdown of the main content sections that are a part of my entire creation and learmin</p>
+			<p class="mt-2 text-md">
+				Here'as a breakdown of the main content sections that are a part of my
+				entire creation and learmin
+			</p>
 			<ol class="mt-4 list-inside list-decimal pl-2 text-md">
 				<li>
 					<a
@@ -22,18 +29,24 @@ import BaseLayout from '../layouts/BaseLayout.astro';
 				</li>
 				<ul class="mt-2 list-inside list-none pl-4 text-md">
 					<li>
-						These aren't collected notes, but thoughtful and curated notes that dig deeper than just surface level information. These are notes that I have taken the time to process and think about, and I hope they can be useful to you as well.
+						These aren't collected notes, but thoughtful and curated notes that
+						dig deeper than just surface level information. These are notes that
+						I have taken the time to process and think about, and I hope they
+						can be useful to you as well.
 					</li>
 				</ul>
 				<li class="mt-2">
 					<a
 						class="text-lg font-bold text-sky-600 underline underline-offset-1 hover:text-sky-800 hover:no-underline"
 						href="/notes/catalog">Daily Journal</a
-			>
+					>
 				</li>
 				<ul class="mt-2 list-inside list-disc pl-4">
 					<li>
-						Everything starts here. This garden is modeled similar to my personal Logseq instance, where I journal daily and then link out to other notes and ideas that I have. This is the heart of the garden, and where most of the growth happens.
+						Everything starts here. This garden is modeled similar to my
+						personal Logseq instance, where I journal daily and then link out to
+						other notes and ideas that I have. This is the heart of the garden,
+						and where most of the growth happens.
 					</li>
 				</ul>
 				<li class="mt-2">
@@ -44,21 +57,33 @@ import BaseLayout from '../layouts/BaseLayout.astro';
 				</li>
 				<ul class="mt-2 list-inside list-disc pl-4">
 					<li>
-						The blog posts are polished and refined pieces of writing that connect notes, ideas, and conclusions I've made from time spent working on projects, reading, writing, and learning. These are the final products that I hope to share with the world, and I hope you find them useful and interesting!
+						The blog posts are polished and refined pieces of writing that
+						connect notes, ideas, and conclusions I've made from time spent
+						working on projects, reading, writing, and learning. These are the
+						final products that I hope to share with the world, and I hope you
+						find them useful and interesting!
 					</li>
 				</ul>
 				<li class="mt-2">
 					<a
 						class="text-lg font-bold text-sky-600 underline underline-offset-1 hover:text-sky-800 hover:no-underline"
-						href="/notes/catalog">Sprints and Projects</a>
+						href="/notes/catalog">Sprints and Projects</a
+					>
 				</li>
 				<ul class="mt-2 list-inside list-disc pl-4 text-md">
 					<li class="text-md">
-						I am a big believer in the power of focused work and sprints to get things done. I am also a big believer in sharing things that work with others, so I am sharing my process for getting things done in the hopes that it might be useful to you as well.
+						I am a big believer in the power of focused work and sprints to get
+						things done. I am also a big believer in sharing things that work
+						with others, so I am sharing my process for getting things done in
+						the hopes that it might be useful to you as well.
 					</li>
 				</ul>
 			</ol>
-			
 		</div>
+	</section>
+	<section>
+		<a href="https://github.com/geauxweisbeck4" rel="me"
+			>github.com/geauxweisbeck4</a
+		>
 	</section>
 </BaseLayout>
