--- a/src/layouts/BlogPostLayout.astro
+++ b/src/layouts/BlogPostLayout.astro
@@ -1,6 +1,8 @@
 ---
 import { type CollectionEntry, render } from "astro:content";
 
+import MastHead from "../components/blog/MastHead.astro";
+
 import BaseLayout from '../layouts/BaseLayout.astro';
 
 interface Props {
@@ -11,5 +13,7 @@ const { post }: Props = Astro.props;
 const { ogImage, title, description, updatedDate, publishDate } = post.data;
 const socialImage = ogImage ?? `/og-image/${post.id}.png`;
 const articleDate = updatedDate?.toISOString() ?? publishDate.toISOString();
-
+const { headings, remarkPluginFrontmatter } = await render(post);
+const readingTime: string = remarkPluginFrontmatter.readingTime;
 ---
+
