--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,5 +1,10 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro";
+
+const meta = {
+  description: "Learn more about Andrew and where you can find his work.",
+  title: "About"
+}
 ---
 
 <BaseLayout>
