--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import BaseLayout from '../layouts/BaseLayout.astro';
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
 ---
 
-<BaseLayout>
+<BaseLayout meta={{ title: "Home" }}>
 	<section class="mx-auto mt-6 flex flex-col bg-white px-4 py-6">
 		<div class="max-w-4xl text-left">
 			<h1 class="text-3xl font-bold mb-4">Meditate. Focus. Create.</h1>
