Save progress - alot done since last commit

--- a/src/components/ui/FormattedDate.astro
+++ b/src/components/ui/FormattedDate.astro
@@ -4,7 +4,7 @@ import type { HTMLAttributes } from "astro/types";
 
 type Props = HTMLAttributes<"time"> & {
   date: Date;
-  dateTimeOptions: Intl.DateTimeFormatOptions;
+  dateTimeOptions?: Intl.DateTimeFormatOptions;
 }
 
 const { date, dateTimeOptions, ...attrs } = Astro.props;
