--- a/src/components/ui/BaseHead.astro
+++ b/src/components/ui/BaseHead.astro
@@ -1,7 +1,7 @@
 ---
 import { WEBMENTION_PINGBACK, WEBMENTION_URL } from 'astro:env/client';
-import { siteConfig } from '../../site.config.ts';
-import type { SiteMeta } from '../../types.ts';
+import { siteConfig } from '../../site.config';
+import type { SiteMeta } from '../../types';
 import '../../styles/global.css';
 
 type Props = SiteMeta;
@@ -17,8 +17,8 @@ const socialImageURL = new URL(
 ).href;
 ---
 
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width" />
+<meta charset="utf-8" />
+<meta content="width=device-width, initial-scale=1.0" name="viewport" />
 <title>{siteTitle}</title>
 
 {/* Icons */}
