--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -18,6 +18,7 @@ const {
 } = Astro.props;
 ---
 
+<!doctype html>
 <html class="scroll-smooth" lang={siteConfig.lang}>
 	<head>
 		<BaseHead
@@ -38,9 +39,9 @@ const {
 			<slot />
 		</main>
 		<Footer />
-		
+
 		<script is:inline type="speculationrules">
-			{
+			window.speculationrules = {
 				"prefetch": [
 					{
 						"where": {
@@ -57,7 +58,7 @@ const {
 						"eagerness": "moderate"
 					}
 				]
-			}
+			};
 		</script>
 	</body>
 </html>
