--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -25,4 +25,49 @@
       color-scheme: light;
     }
   }
+
+  :target {
+    scroll-margin-block: 5ex;
+  }
+
+  @view-transition {
+    navigation: auto;
+  }
+
+  /* Astro image responsive style, modified from -> https: //docs.astro.build/en/guides/images/#responsive-image-styles */
+  :where([data-astro-image]) {
+    object-fit: var(--fit);
+    object-position: var(--pos);
+  }
+  [data-astro-image="full-width"] {
+    width: 100%;
+  }
+  [data-astro-image="constrained"] {
+    max-width: 100%;
+  }
+}
+
+@layer components {
+  @import "./components/admonition.css";
+  @import "./components/github-card.css";
+
+  .weisgarden-link {
+    @apply hover:decoration-link underline underline-offset-2 hover:decoration-2;
+  }
+
+  .title {
+    @apply text-accent-2 text-2xl font-semibold;
+  }
+}
+
+@utility prose {
+  --tw-prose-body: var(--color-global-text);
+  --tw-prose-bold: var(--color-global-text);
+  --tw-prose-bullets: var(--color-global-text);
+  --tw-prose-code: var(--color-global-text);
+  --tw-prose-headings: var(--color-accent-2);
+  --tw-prose-hr: 0.5px dashed #666;
+  --tw-prose-links: var(--color-global-text);
+  --tw-prose-quotes: var(--color-quote);
+  --tw-prose-th-borders: #666;
 }
